Added some mockito tests (still needs work)